force-app/main/default/objects/Add_on__c/Add_on__c.object-meta.xml
<CustomObject>
    <label>Add-on</label>
    <pluralLabel>Add-ons</pluralLabel>
    <nameField>
        <label>Add-on Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>