force-app/main/default/objects/Add_on__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Add-on cost</description>
</CustomField>