force-app/main/default/objects/Add_on__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Add-on price</description>
</CustomField>